--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Python virtual environments
 python-preprocess/.venv/
 python-preprocess/.venv/*
+
+# Virtual environments
 **/.venv/
 **/.venv/*
+
+# PyCharm
+.idea/
