--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,115 @@
-# Byte-compiled / built files
+#############
+# General
+#############
+*.log
+*.tmp
+*.bak
+*.swp
+*.swo
+
+#############
+# OS
+#############
+.DS_Store
+Thumbs.db
+desktop.ini
+
+#############
+# IDEs
+#############
+.vscode/
+.vs/
+.idea/
+*.user
+*.suo
+*.sln.docstates
+
+#############
+# .NET build
+#############
+bin/
+obj/
+Debug/
+Release/
+[Rr]elease*/
+[Dd]ebug*/
+TestResults/
+*.VisualState.xml
+*_i.c
+*_p.c
+*_h.h
+*.ilk
+*.meta
+*.obj
+*.pch
+*.pdb
+*.rsp
+*.tlb
+*.tli
+*.tlh
+*.tmp_proj
+*.vspscc
+*_i.obj
+*.cachefile
+*.dbmdl
+
+#############
+# Python
+#############
 __pycache__/
 *.py[cod]
 *$py.class
 
-# Virtual environments
-**/.venv/
-**/venv/
+# Virtual envs
 venv/
+.venv/
+env/
 .env/
+env.bak/
+.python-version
 
-# IDE / Editor folders
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
+# Distribution / packaging
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# OS files
-.DS_Store
-Thumbs.db
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Build / output folders (عموماً برای Delphi / .NET)
-bin/
-obj/
-*.exe
-*.dll
-*.pdb
-*.log
+#############
+# Node / frontend (future)
+#############
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-store/
+
+#############
+# Delphi
+#############
+*.dproj.local
+__history/
+__recovery/
+*.stat
+*.dsk
+*.local
+
+#############
+# Deploy / runtime
+#############
+deploy/volumes/
+deploy/logs/
