--- a/src/dotnet/apps/face-demo/Face.Demo.Web/Face.Demo.Web.csproj
+++ b/src/dotnet/apps/face-demo/Face.Demo.Web/Face.Demo.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\backend\Face.Contracts\Face.Contracts.csproj" />
+    <ProjectReference Include="..\..\..\backend\Face.Application\Face.Application.csproj" />
   </ItemGroup>
 
 </Project>
