--- a/src/dotnet/backend/Face.Api/appsettings.json
+++ b/src/dotnet/backend/Face.Api/appsettings.json
@@ -5,6 +5,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Information"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  },
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=FacePlatform;Trusted_Connection=True;TrustServerCertificate=True;"
