--- a/src/dotnet/backend/Face.Api/appsettings.json
+++ b/src/dotnet/backend/Face.Api/appsettings.json
@@ -1,62 +1,66 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      { "Name": "Console" },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/log-.txt",
-          "rollingInterval": "Day",
-          "restrictedToMinimumLevel": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
         }
-      }
-    ],
-    "Enrich": [ "FromLogContext" ]
-  },
+    },
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information"
+            }
+        },
+        "WriteTo": [
+            { "Name": "Console" },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "Logs/log-.txt",
+                    "rollingInterval": "Day",
+                    "restrictedToMinimumLevel": "Information"
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext" ]
+    },
 
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=FacePlatform;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
-  "AiServices": {
-    "FramePreprocess": {
-      "BaseUrl": "http://localhost:8010",
-      "TimeoutSeconds": 5
+    "AllowedHosts": "*",
+    "ConnectionStrings_Local": {
+        "DefaultConnection": "Server=.;Database=FacePlatform;Trusted_Connection=True;TrustServerCertificate=True;"
     },
-    "ImageNormalize": {
-      "BaseUrl": "http://localhost:8020",
-      "TimeoutSeconds": 10
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=31.14.115.73\\SQL2022,1121;Database=face_platform;User Id=face_platform_user;Password=N@z@r1;TrustServerCertificate=True;"
     },
-    "FaceDetectPython": {
-      "BaseUrl": "http://localhost:8030",
-      "TimeoutSeconds": 10
+
+    "AiServices": {
+        "FramePreprocess": {
+            "BaseUrl": "http://localhost:8010",
+            "TimeoutSeconds": 5
+        },
+        "ImageNormalize": {
+            "BaseUrl": "http://localhost:8020",
+            "TimeoutSeconds": 10
+        },
+        "FaceDetectPython": {
+            "BaseUrl": "http://localhost:8030",
+            "TimeoutSeconds": 10
+        }
+    },
+    "Jwt": {
+        "Key": "THIS_IS_DEMO_SECRET_KEY_CHANGE_IN_PRODUCTION_123456",
+        "Issuer": "FacePlatform",
+        "Audience": "FacePlatformClients",
+        "ExpiresMinutes": 120
+    },
+    "RabbitMq": {
+        "Management": {
+            "BaseUrl": "http://31.14.115.73:15672/api",
+            "UserName": "nazari",
+            "Password": "N@z@r1"
+        }
     }
-  },
-  "Jwt": {
-    "Key": "THIS_IS_DEMO_SECRET_KEY_CHANGE_IN_PRODUCTION_123456",
-    "Issuer": "FacePlatform",
-    "Audience": "FacePlatformClients",
-    "ExpiresMinutes": 120
-  },
-  "RabbitMq": {
-    "Management": {
-      "BaseUrl": "http://31.14.115.73:15672/api",
-      "UserName": "nazari",
-      "Password": "N@z@r1"
-    }
-  }
 }
